--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Century Gothic, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 28px;
+}
+
+
+nav a:hover,
+nav a:focus {
+  background-color: blue;
+  color: white;
+}
+
 body {
-  background-color: pink
+  background-color: #191627;
+  color: white;
+  /*light purple #a395e9 */
+}
+
+header {
+  width: 100%;
+}
+
+figure {
+  text-align: center;
+  margin-top: 50px;
+}
+figure img {
+  height: 10%;
+  width: 10%;
 }
