--- a/style.css
+++ b/style.css
@@ -9,6 +9,30 @@ html {
   font-size: 28px;
 }
 
+nav ul {  
+  box-sizing: border-box;
+  background-color: #a395e9;
+  list-style-type: none;
+  padding: 0;
+  width: 40%;
+  font-size: 0;
+  margin: auto;
+}
+
+nav li {
+  display: inline-block;
+  font-size: 1rem;
+  width: 20%;
+  text-align: center;
+}
+
+nav a {
+  display: inline-block;
+  text-decoration: none;
+  width: 100%;
+  padding: 0;
+  line-height: 2rem;
+}
 
 nav a:hover,
 nav a:focus {
