--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Century Gothic, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: Quicksand, Century Gothic, sans-serif;
   box-sizing: border-box;
 }
 
@@ -70,7 +70,7 @@ header h1 {
   margin: 10px;
 }
 
-header h4 {
+header h5 {
   margin: 10px;
 }
 
