--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav a:focus {
 }
 
 main {
-  margin-bottom: 200px;
+  margin-bottom: 50px;
   margin-top: 100px;
   margin-left: 0px;
 }
@@ -97,8 +97,25 @@ header p {
   margin: 0 auto;
 }
 
+.chart p {
+  margin-bottom: 20px;
+}
+
+/* set the style for the rect elements in the flowchart*/
+rect {
+  fill: white;
+  stroke: white;
+  stroke-width: 20px;
+  height: 75px;
+}
+
+.mermaid .edgePath .edge-arrows {
+  stroke: white !important;
+  stroke-width: 2px !important;
+  fill: white !important;
+} 
+
 #about {
-  margin-bottom: 200px;
   text-align: left;
 }
 
@@ -112,11 +129,9 @@ header p {
 }
 
 #projects{
-  margin-bottom: 200px;
   text-align: center;
 }
 #contact{
-  margin-bottom: 200px;
   text-align: center;
 }
 
