--- a/style.css
+++ b/style.css
@@ -16,25 +16,31 @@ body {
   /*light purple #a395e9 */
 }
 
-nav ul {  
+#menu {
+  position: fixed;
+  top: 5px;
+  width: 100%;
+  z-index: 1;
+}
+
+#menu ul {
+  margin: 0 auto;
   box-sizing: border-box;
   background-color: #a395e9;
   list-style-type: none;
   border-radius: 25px;
   width: 30%;
   font-size: 0;
-  text-align: center;
-  margin: 50px auto auto auto; 
 }
 
-nav li {
+#menu li {
   display: inline-block;
   font-size: 0.8rem;
   width: 20%;
   text-align: center;
 }
 
-nav a {
+#menu a {
   display: inline-block;
   text-decoration: none;
   width: 90%;
@@ -43,17 +49,22 @@ nav a {
   line-height: 1.5rem;
 }
 
-nav a:hover,
-nav a:focus {
+#menu a:hover,
+#menu a:focus {
   border-radius: 25px;
   background-color: #8a76d1;
   color: white;
 }
 
-main {
-  margin-bottom: 50px;
-  margin-top: 100px;
-  margin-left: 0px;
+section {
+  margin: 100px auto;
+  text-align: left;
+  width: 1000px;
+  scroll-margin-top: 60px;
+}
+
+.header-wrapper {
+  padding-top: 50px;
 }
 
 header {
@@ -82,7 +93,6 @@ h1 {
   margin-bottom: 10px;
 }
 
-
 header h5 {
   margin-bottom: 10px;
 }
@@ -90,6 +100,16 @@ header h5 {
 header p {
   font-size: 0.8rem;
   text-align: right;
+}
+
+#projects p {
+  padding-bottom: 20px;
+}
+
+#projects img {
+  width: 700px;
+  height: auto;
+  box-shadow: 0 0 10 rgba(128, 128, 128, 1);
 }
 
 .centerIt {
@@ -115,24 +135,8 @@ rect {
   fill: white !important;
 } 
 
-#about {
-  text-align: left;
-}
-
-#skills{
-  margin: 100px 200px 200px 400px;
-  text-align: left;
-}
-
 #skills p {
   margin: 3px 0;
-}
-
-#projects{
-  text-align: center;
-}
-#contact{
-  text-align: center;
 }
 
 .type-me::after {
