--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body {
   background-color: #a395e9;
   list-style-type: none;
   border-radius: 25px;
-  width: 30%;
+  min-width: 300px;
+  max-width: 500px;
   font-size: 0;
 }
 
@@ -120,20 +121,6 @@ header p {
 .chart p {
   margin-bottom: 20px;
 }
-
-/* set the style for the rect elements in the flowchart*/
-rect {
-  fill: white;
-  stroke: white;
-  stroke-width: 20px;
-  height: 75px;
-}
-
-.mermaid .edgePath .edge-arrows {
-  stroke: white !important;
-  stroke-width: 2px !important;
-  fill: white !important;
-} 
 
 #skills p {
   margin: 3px 0;
