--- a/todo_list/style.css
+++ b/todo_list/style.css
@@ -6,76 +6,9 @@ body {
   width: 100%;
 }
 
-.modal {
-  position: absolute;
-  top: 0px;
-  left: 52%;
-  width: 500px;
-  height: 600px;
-  opacity: 0;
-  height: auto;
-  z-index: 2;
-  background-color: white;
-  padding: 20px;
+.container {
+  display: flex;
 }
-
-/* Style labels and inputs as inline-block elements */
-.modal label,
-.modal input,
-.modal select,
-.modal textarea {
-  display: inline-block;
-  vertical-align: middle;
-  /* Align elements vertically */
-  margin-right: 10px;
-  /* Adjust as needed for spacing */
-}
-
-input.toggle-modal:checked~.modal {
-  position: fixed;
-  top: 30%;
-  left: 52%;
-  width: 500px;
-  height: 600px;
-  opacity: 1;
-  height: auto;
-  z-index: 2;
-  background-color: white;
-  padding: 20px;
-}
-
-input.toggle-modal:checked ~ div.modal::after {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  content: "";
-  background: rgba(0, 0, 0, .2);
-  /*rgb alpha with opacity to create transparency*/
-}
-
-.modal .modal-title, .modal .modal-due-date, .modal .modal-description {
-  display: block;
-}
-
-.hamburger {
-  position: fixed;
-  top: 22px;
-  left: 20px;
-  width: 26px;
-  height: 20px;
-  opacity: 1;
-}
-
-/* div.grid-container {
-  display: grid;
-  width: 1200px;
-  height: 100%;
-  grid-template-columns: 335px 1fr;
-  height: 100vh; /* 100% of viewport*/
- */
 
 .clearfix::after {
   content: "";
@@ -84,13 +17,124 @@ input.toggle-modal:checked ~ div.modal::after {
 }
 
 #nav-bar {
-  float: left;
   width: 335px;
   height: 100vh;
   background-color: #464f77;
   padding-top: 75px;
 }
 
+#todo-area {
+  padding: 75px 0 0 20px;
+  background-color: white;
+  flex-grow: 1;
+}
+
+/* ----------------- hamburger -------------------------------- */
+.hamburger {
+  position: fixed;
+  top: 22px;
+  left: 365px;
+  width: 26px;
+  height: 20px;
+  opacity: 0;
+}
+/* ------------------MODAL CSS---------------------------------*/
+.modal {
+  position: absolute;
+    top: 0;
+    left: 50%;
+    width: 450px;
+    height: 1000px;
+    opacity: 0;
+    z-index: 2;
+    background-color: white;
+    padding: 20px;
+    border: 1px solid black;
+}
+
+/* Style labels and inputs as inline-block elements */
+.form-group {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+}
+
+.form-group label {
+  flex-basis: 20%; /* Adjust the width of the label column */
+}
+
+.form-group select, input, text-area {
+  height: 26px;
+}
+
+.form-group select{
+  width: 100px;
+}
+
+.form-group input,
+.form-group div.select-container,
+.form-group textarea {
+  flex-grow: 1;
+}
+
+.form-group .select-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-group .description {
+  align-self: flex-start;
+}
+
+.form-group .text-area {
+  color: #b3b3b3;
+}
+
+.form-group .month-option, .year-option {
+  color: #b3b3b3;
+}
+
+
+.form-group .complete-form {
+  width: 180px;
+  height: 35px;
+  background-color: #148fd5;
+  color: white;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+}
+
+.form-group .save {
+  margin-right: 15px;
+}
+input.toggle-modal:checked~.modal {
+  position: absolute;
+  top: 0;
+  left: 50%; /*positoned at 50% of the page*/
+  margin: 0 0 0 -225px; /*shifted left by half the width of the image*/
+  width: 500px;
+  height: 350px;
+  opacity: 1;
+  z-index: 2;
+  background-color: white;
+  padding: 20px;
+}
+
+input.toggle-modal:checked ~ .overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  content: "";
+  background: rgba(0, 0, 0, .2);
+} /*rgb alpha with opacity to create transparency*/
+
+/* --------NAV BAR----------------------------------------------------*/
 #nav-bar ul {
   color: #a3a7bb;
 }
@@ -100,6 +144,11 @@ input.toggle-modal:checked ~ div.modal::after {
   align-items: center;
   width: 100%;
   height: 100%
+}
+
+#nav-bar .highlighted {
+  background-color: #38405e;
+  color: white;
 }
 
 #nav-bar ul.first-list {
@@ -147,6 +196,20 @@ input.toggle-modal:checked ~ div.modal::after {
   font-weight: 300;
 }
 
+#nav-bar .highlighted .circle {
+  display: inline-block;
+    height: 18px;
+    width: 18px;
+    line-height: 18px;
+    border-radius: 50%;
+  
+    background-color: #148fd5;
+    color: white;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 300;
+}
+
 .title-circle {
   display: inline-block;
   height: 18px;
@@ -164,12 +227,7 @@ input.toggle-modal:checked ~ div.modal::after {
   text-decoration: line-through;
 }
 
-#todo-area {
-  padding: 75px 0 0 20px;
-  background-color: white;
-  float: left;
-}
-
+/* --------TODO AREA-----------------------------------------------*/
 #todo-area ul {
   position: relative;
 }
@@ -243,6 +301,7 @@ input.toggle-modal:checked ~ div.modal::after {
   color: #148fd5;
 }
 
+/* --------INPUT------------------------------------------------------------*/
 input[type="checkbox"] { /*hide checkbox*/
   display: none;
   cursor: pointer;
@@ -288,6 +347,7 @@ input.toggle-date:checked ~ div.test {
   opacity: 1;
 }
 
+/*------ RESPONSIVE DESIGN--------------------------------------------*/
 @media (max-width: 768px) {
   .grid-container {
     margin: 0 auto;
@@ -299,7 +359,16 @@ input.toggle-date:checked ~ div.test {
   }
 
   .hamburger {
+    position: fixed;
+    top: 22px;
+    left: 30px;
+    width: 26px;
+    height: 20px;
     opacity: 1;
+  }
+
+  input.toggle-hamburger:checked ~ #nav-bar{
+    display: block;
   }
 
 }
